added assignments to the index.html

--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@
 
             /* my assignments  */
             #my_assignments {
-                height: 2390px;
+                height: 2120px;
             }
 
             #my_assignments>section>h2 {
@@ -2006,7 +2006,7 @@
 
             /* my assignments  */
             #my_assignments {
-                height: 2690px;
+                height: 2360px;
             }
 
             #my_assignments>section>h2 {
@@ -2452,7 +2452,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 2830px;
+                height: 3000px;
             }
 
             #my_projects>section>h2 {
@@ -2488,7 +2488,7 @@
 
             /* my assignments  */
             #my_assignments {
-                height: 2950px;
+                height: 2550px;
             }
 
             #my_assignments>section>h2 {
@@ -3318,6 +3318,10 @@
         /* 1024 - 1440 */
         @media all and (min-width:1024px) and (max-width:1440px) {
 
+            #my_assignments>section>section:nth-child(3)>div {
+                height: 350px;
+            }
+
             #my_edu_quali {
                 height: 700px;
             }
@@ -3673,53 +3677,49 @@
                 <hr>
                 <section>
                     <div>
-                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
-                        <h4>E-commerce Website Front-end Development</h4>
+                        <img src="pages/assets/images/transition case 2.jpg" alt="transition case 2 image">
+                        <h4>Transition Case 2</h4>
                         <article>
-                            <p>Develop the front-end of an e-commerce website using HTML, CSS, and JavaScript</p>
+                            <p>Simple transition - Creates a centered square div element with some styling, and rotates
+                                it when hovered over.</p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
-                        <h4>Bug Fixing and Testing</h4>
+                        <img src="pages/assets/images/transition case 3.jpg" alt="transition case 3 image">
+                        <h4>Transition Case 3</h4>
                         <article>
-                            <p>Identify and fix bugs in a software application through thorough testing and effective
-                                solutions
+                            <p>When you hover over the image, a black bar gradually appears below it, and the delete
+                                icon moves down. These effects are achieved through CSS transitions and positioning.
                             </p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
-                        <h4>Software Documentation and Technical Writing</h4>
+                        <img src="pages/assets/images/transition case 4.jpg" alt="transition case 4 image">
+                        <h4>Transition Case 4</h4>
                         <article>
-                            <p>Create comprehensive software documentation, including user manuals and technical guides,
-                                with
-                                strong writing skills and attention to detail</p>
+                            <p> When you hover over the circular element, it rotates 360 degrees with a smooth transition effect. </p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
-                        <h4>E-commerce Website Front-end Development</h4>
+                        <img src="pages/assets/images/css case 3.jpg" alt="css case 3 image">
+                        <h4>CSS Case 3</h4>
                         <article>
-                            <p>Develop the front-end of an e-commerce website using HTML, CSS, and JavaScript</p>
+                            <p>As you scroll down the page, the circular elements transition to reveal different text titles.</p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
-                        <h4>Bug Fixing and Testing</h4>
+                        <img src="pages/assets/images/animation case 1.jpg" alt="animation case 1 image">
+                        <h4>Animation Case 1</h4>
                         <article>
-                            <p>Identify and fix bugs in a software application through thorough testing and effective
-                                solutions
+                            <p>This HTML and CSS code creates a rectangular element that undergoes an animation when the webpage loads.
                             </p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
-                        <h4>Software Documentation and Technical Writing</h4>
+                        <img src="pages/assets/images/animation case 3.jpg" alt="animation case 3 image">
+                        <h4>Animation Case 2</h4>
                         <article>
-                            <p>Create comprehensive software documentation, including user manuals and technical guides,
-                                with
-                                strong writing skills and attention to detail</p>
+                            <p>This HTML and CSS code creates a horizontal slideshow of images that continuously move from right to left across the screen.</p>
                         </article>
                     </div>
                 </section>
