adjusted section heights

--- a/index.html
+++ b/index.html
@@ -3318,6 +3318,14 @@
         /* 1024 - 1440 */
         @media all and (min-width:1024px) and (max-width:1440px) {
 
+            #skills {
+                height: 1200px;
+            }
+
+            #skills>section>section:nth-child(4)>div {
+                height: 320px;
+            }
+
             #my_assignments>section>section:nth-child(3)>div {
                 height: 350px;
             }
@@ -3697,21 +3705,24 @@
                         <img src="pages/assets/images/transition case 4.jpg" alt="transition case 4 image">
                         <h4>Transition Case 4</h4>
                         <article>
-                            <p> When you hover over the circular element, it rotates 360 degrees with a smooth transition effect. </p>
+                            <p> When you hover over the circular element, it rotates 360 degrees with a smooth
+                                transition effect. </p>
                         </article>
                     </div>
                     <div>
                         <img src="pages/assets/images/css case 3.jpg" alt="css case 3 image">
                         <h4>CSS Case 3</h4>
                         <article>
-                            <p>As you scroll down the page, the circular elements transition to reveal different text titles.</p>
+                            <p>As you scroll down the page, the circular elements transition to reveal different text
+                                titles.</p>
                         </article>
                     </div>
                     <div>
                         <img src="pages/assets/images/animation case 1.jpg" alt="animation case 1 image">
                         <h4>Animation Case 1</h4>
                         <article>
-                            <p>This HTML and CSS code creates a rectangular element that undergoes an animation when the webpage loads.
+                            <p>This HTML and CSS code creates a rectangular element that undergoes an animation when the
+                                webpage loads.
                             </p>
                         </article>
                     </div>
@@ -3719,7 +3730,8 @@
                         <img src="pages/assets/images/animation case 3.jpg" alt="animation case 3 image">
                         <h4>Animation Case 2</h4>
                         <article>
-                            <p>This HTML and CSS code creates a horizontal slideshow of images that continuously move from right to left across the screen.</p>
+                            <p>This HTML and CSS code creates a horizontal slideshow of images that continuously move
+                                from right to left across the screen.</p>
                         </article>
                     </div>
                 </section>
