added some project details

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
         /* my projects */
         #my_projects {
-            height: 1300px;
+            height: 800px;
         }
 
         #my_projects>section>h2 {
@@ -514,7 +514,7 @@
         #my_projects>section>section:nth-child(3) {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(2, 1fr);
+            grid-template-rows: repeat(1, 1fr);
             row-gap: 20px;
             column-gap: 20px;
             width: 80%;
@@ -589,7 +589,7 @@
             left: 0;
             right: 0;
             margin: auto;
-            top: 220px;
+            top: 240px;
             height: 50px;
             border-radius: 10px;
             border: 5px solid #4b4b4b;
@@ -1486,7 +1486,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 2550px;
+                height: 1360px;
             }
 
             #my_projects>section>h2 {
@@ -1966,7 +1966,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 2800px;
+                height: 1420px;
             }
 
             #my_projects>section>h2 {
@@ -2452,7 +2452,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 3000px;
+                height: 1500px;
             }
 
             #my_projects>section>h2 {
@@ -2484,6 +2484,10 @@
 
             #my_projects>section>section:nth-child(3)>div>article {
                 font-size: 3vw;
+            }
+
+            #my_projects>section>a:nth-child(4)>section {
+                top: 180px;
             }
 
             /* my assignments  */
@@ -2904,20 +2908,25 @@
             /* my projects  */
 
             #my_projects {
-                height: 1900px;
+                height: 1550px;
             }
 
             #my_projects>section>section:nth-child(3) {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(1, 1fr);
                 grid-template-rows: repeat(3, 1fr);
                 top: 200px;
-                row-gap: 0px;
+                row-gap: 40px;
                 column-gap: 0px;
                 width: 90%;
             }
 
             #my_projects>section>section:nth-child(3)>div {
-                height: 465px;
+                /* height: 465px; */
+                width: 60%;
+                left: 0;
+                right: 0;
+                margin: auto;
+                height: 350px;
             }
 
             #my_projects>section>section:nth-child(3)>div>h4 {
@@ -3190,7 +3199,7 @@
             }
 
             #my_projects {
-                height: 1180px;
+                height: 800px;
             }
 
             #my_projects>section>section:nth-child(3)>div>img {
@@ -3324,6 +3333,10 @@
 
             #skills>section>section:nth-child(4)>div {
                 height: 320px;
+            }
+
+            #my_projects>section>section:nth-child(3)>div>article {
+                margin-bottom: 60px;
             }
 
             #my_assignments>section>section:nth-child(3)>div {
@@ -3614,59 +3627,26 @@
                 <hr>
                 <section>
                     <div>
-                        <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image"
-                            width="300">
-                        <h4>Project Smart Inventory</h4>
+                        <img src="assets/resources/images/projects/wineverse.jpg" alt="project 1 image">
+                        <h4>Project Wineverse</h4>
                         <article>
-                            <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize
-                                purchasing, and improve inventory turnover for efficient business operations.</p>
+                            <p>Revolutionize your wine store management with Project WineVerse. Experience a new level
+                                of efficiency in your wine business operations with this application..</p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/featured-image.jpg" alt="project 2 image" width="300">
-                        <h4>Project Data Analyzer</h4>
+                        <img src="assets/resources/images/projects/hostel.jpg" alt="project 2 image">
+                        <h4>Simple Hostel Management System using Hibernate</h4>
                         <article>
-                            <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics
-                                and
-                                intuitive visualizations to make data-driven decisions and uncover trends and
-                                opportunities
+                            <p>A simple hostel management system to demonstrate the use of hibernate in an application software.
                             </p>
                         </article>
                     </div>
                     <div>
-                        <img src="assets/resources/images/project.png" alt="project 3 image" width="300">
-                        <h4>Project Event Planner</h4>
+                        <img src="assets/resources/images/projects/chat app socket.jpg" alt="project 3 image">
+                        <h4>Chat Application using Socket Programming</h4>
                         <article>
-                            <p>Simplify event planning with EventPlanner. From guest management to budget tracking,
-                                effortlessly organize and execute successful events with this versatile software.</p>
-                        </article>
-                    </div>
-                    <div>
-                        <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image"
-                            width="300">
-                        <h4>Project Smart Inventory</h4>
-                        <article>
-                            <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize
-                                purchasing, and improve inventory turnover for efficient business operations.</p>
-                        </article>
-                    </div>
-                    <div>
-                        <img src="assets/resources/images/featured-image.jpg" alt="project 2 image" width="300">
-                        <h4>Project Data Analyzer</h4>
-                        <article>
-                            <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics
-                                and
-                                intuitive visualizations to make data-driven decisions and uncover trends and
-                                opportunities
-                            </p>
-                        </article>
-                    </div>
-                    <div>
-                        <img src="assets/resources/images/project.png" alt="project 3 image" width="300">
-                        <h4>Project Event Planner</h4>
-                        <article>
-                            <p>Simplify event planning with EventPlanner. From guest management to budget tracking,
-                                effortlessly organize and execute successful events with this versatile software.</p>
+                            <p>Socket Programming - Simple Chat Application</p>
                         </article>
                     </div>
                 </section>
