--- a/index.html
+++ b/index.html
@@ -3590,31 +3590,30 @@
                     </div>
                     <div>
                         <div>
-                            <i class="fa-solid fa-display"></i>
+                            <i class="fa-solid fa-mobile-screen"></i>
                         </div>
-                        <h3>Desktop Application Development</h3>
-                        <p>With a mastery of desktop application development, From concept to completion, I deliver
-                            exceptional applications that elevate user experiences and drive business growth.</p>
+                        <h3>Mobile Applications</h3>
+                        <p>With a deep expertise in mobile application development, I craft outstanding applications
+                            that enhance user experiences, from initial concept to polished
+                            execution.</p>
                     </div>
                     <div>
                         <div>
-                            <i class="fa-solid fa-earth-americas"></i>
+                            <i class="fa-solid fa-hands-holding"></i>
                         </div>
-                        <h3>Web Application Development</h3>
-                        <p>I create visually stunning, user-friendly, and seamless online experiences. From e-commerce
-                            platforms to custom web solutions, I deliver innovative applications that engage users and
-                            drive
-                            business success.</p>
+                        <h3>Freelancing</h3>
+                        <p>I offer a wealth of expertise that spans various
+                            industries. From concept to execution, I deliver exceptional freelance solutions that
+                            empower clients and drive success.</p>
                     </div>
                     <div>
                         <div>
-                            <i class="fa-solid fa-pen-nib"></i>
+                            <i class="fa-solid fa-paint-roller"></i>
                         </div>
-                        <h3>Graphic Designing</h3>
-                        <p>As a master of graphic design, I create captivating visuals that leave a lasting impact. From
-                            brand identities to visual narratives, my innovative designs amplify brand presence and
-                            engage
-                            audiences with style.</p>
+                        <h3>UI/UX Designing</h3>
+                        <p>I'm dedicated to creating exceptional user interfaces that transform digital interactions. I craft solutions that elevate
+                            user experiences and drive business growth.
+                          </p>
                     </div>
                 </section>
             </section>
@@ -3638,7 +3637,8 @@
                         <img src="assets/resources/images/projects/hostel.jpg" alt="project 2 image">
                         <h4>Simple Hostel Management System using Hibernate</h4>
                         <article>
-                            <p>A simple hostel management system to demonstrate the use of hibernate in an application software.
+                            <p>A simple hostel management system to demonstrate the use of hibernate in an application
+                                software.
                             </p>
                         </article>
                     </div>
