--- a/index.html
+++ b/index.html
@@ -22,6 +22,65 @@
     <meta name="theme-color" content="red">
     <meta name="robots" content="noindex,nofollow">
     <style>
+        #animated_section{
+            width:100%;
+            height: 100vh;
+            /* background-color: aliceblue; */
+            z-index:1;
+            margin:auto;
+            position: fixed;
+            border:2px solid red;
+            box-sizing: border-box;
+        }
+        .code {
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            background-color: #00FF00;
+            display:inline-block;
+            animation-name: moveCode;
+            animation-duration: 5s;
+            top:90px;
+            margin: auto;
+        }
+
+        @keyframes moveCode {
+            0% {
+                top: 90px;
+                left: 0 ;
+                bottom: auto;
+                right: auto;
+            }
+
+            25% {
+                top: 90px;
+                left:auto ;
+                bottom:auto ;
+                right: 0;
+            } 
+
+            50% {
+                top: ;
+                left: ;
+                bottom: ;
+                right: ;
+            } 
+
+            75% {
+                top: ;
+                left: ;
+                bottom: ;
+                right: ;
+            }
+
+            100% {
+                top: ;
+                left: ;
+                bottom: ;
+                right: ;
+            }
+        }
+
         /* header */
         body>header {
             width: 100%;
@@ -1214,8 +1273,6 @@
             font-size: 3em;
             color: #3b3b3b;
             border-radius: 200px;
-            transition-duration: 1s;
-            transition-property: font-size;
         }
 
         body>div:nth-child(4):hover {
@@ -1226,11 +1283,10 @@
         }
 
         body>div:nth-child(4):hover a>i {
-            font-size: 3.5em;
             background-color: white;
             rotate: -360deg;
             transition-duration: 1s;
-            transition-property: font-size, rotate;
+            transition-property: rotate;
         }
 
         main {
@@ -3438,6 +3494,9 @@
     </header>
 
     <main>
+        <section id="animated_section">
+            <div class="code">1111111111</div>
+        </section>
         <!-- home -->
         <Section id="home" class="page_sec">
             <section class="sub_section">
@@ -3611,9 +3670,10 @@
                             <i class="fa-solid fa-paint-roller"></i>
                         </div>
                         <h3>UI/UX Designing</h3>
-                        <p>I'm dedicated to creating exceptional user interfaces that transform digital interactions. I craft solutions that elevate
+                        <p>I'm dedicated to creating exceptional user interfaces that transform digital interactions. I
+                            craft solutions that elevate
                             user experiences and drive business growth.
-                          </p>
+                        </p>
                     </div>
                 </section>
             </section>
@@ -3866,13 +3926,11 @@
                 Copyright © 2023 - Duvindu Thathsara All Rights Reserved</small>
         </div>
     </footer>
-
     <div>
         <a href="#home">
             <i class="fa-solid fa-circle-chevron-up fa-fade" style="--fa-animation-duration: 1.5s;"></i>
         </a>
     </div>
-
 </body>
 
 </html>
