--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -109,7 +109,6 @@
         body>main>section>div>a>button:hover {
             background-color: white;
             color: black;
-            border: 3px solid #eb4a4c;
         }
 
         body>main>section>div>h4 {
@@ -304,7 +303,25 @@
                 <video src="assets/videos/animation case 2.webm" muted autoplay loop></video>
                 <h4>Animation Case 2</h4>
                 <div></div>
+                <a href="../assignments/CSS/animation/Case 2/index.html" target="_blank">
+                    <button>Check It Out</button>
+                </a>
+            </div>
+            <div>
+                <!-- <img src="assets/images/animation case 1.jpg" alt="image of animation case 1"> -->
+                <video src="assets/videos/animation case 3.webm" muted autoplay loop></video>
+                <h4>Animation Case 3</h4>
+                <div></div>
                 <a href="../assignments/CSS/animation/Case 3/index.html" target="_blank">
+                    <button>Check It Out</button>
+                </a>
+            </div>
+            <div>
+                <!-- <img src="assets/images/animation case 3.jpg" alt="image of animation case 2"> -->
+                <video src="assets/videos/animation case 4.webm" muted autoplay loop></video>
+                <h4>Animation Case 4</h4>
+                <div></div>
+                <a href="../assignments/CSS/animation/Case 4/index.html" target="_blank">
                     <button>Check It Out</button>
                 </a>
             </div>
