--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             animation-direction: alternate;
             animation-iteration-count: infinite;
         }
+
         #code19 {
             animation-name: moveCode19;
             animation-duration: 6s;
@@ -209,6 +210,7 @@
             animation-direction: alternate;
             animation-iteration-count: infinite;
         }
+
         #code20 {
             animation-name: moveCode20;
             animation-duration: 8s;
@@ -546,6 +548,7 @@
                 top: calc(50% - 40px);
                 left: 50px;
             }
+
             100% {
                 top: calc(100% - 40px);
                 left: 50px;
@@ -555,11 +558,12 @@
         @keyframes moveCode15 {
             0% {
                 top: calc(70% - 40px);
-            left: calc(100% - 220px);
+                left: calc(100% - 220px);
             }
+
             100% {
                 top: calc(100% - 40px);
-            left: calc(100% - 220px);
+                left: calc(100% - 220px);
             }
         }
 
@@ -568,10 +572,12 @@
                 top: calc(40% - 40px);
                 left: -150px;
             }
+
             50% {
                 top: calc(100% - 40px);
                 left: calc(20% - 150px);
             }
+
             100% {
                 top: 90px;
                 left: calc(100% - 150px);
@@ -583,16 +589,19 @@
                 top: 150px;
                 left: calc(20% - 150px);
             }
+
             100% {
                 top: 150px;
                 left: calc(80% - 150px);
             }
         }
+
         @keyframes moveCode18 {
             0% {
                 bottom: 100px;
                 left: calc(80% - 150px);
             }
+
             100% {
                 bottom: 100px;
                 left: calc(20% - 150px);
@@ -604,6 +613,7 @@
                 top: calc(40% - 40px);
                 left: calc(80% - 150px);
             }
+
             100% {
                 top: calc(80% - 40px);
                 left: calc(80% - 150px);
@@ -615,6 +625,7 @@
                 top: calc(40% - 40px);
                 left: calc(10% - 150px);
             }
+
             100% {
                 top: calc(80% - 40px);
                 left: calc(40% - 150px);
@@ -977,7 +988,7 @@
             z-index: 2;
         }
 
-        #skills>section>section:nth-child(3):hover{
+        #skills>section>section:nth-child(3):hover {
             background-color: rgb(14, 14, 23);
             transition-duration: 1s;
             transition-property: background-color;
@@ -988,19 +999,19 @@
             width: 60px;
             border: 5px solid white;
             transition-duration: 1s;
-            transition-property:border;
+            transition-property: border;
         }
 
         #skills>section>section:nth-child(3)>div>figure:hover img {
             border: 5px solid #EB4A4C;
             transition-duration: 1s;
-            transition-property:border;
+            transition-property: border;
         }
 
         #skills>section>section:nth-child(3)>div>figure:hover figcaption {
-            color:#EB4A4C;
+            color: #EB4A4C;
             transition-duration: 1s;
-            transition-property:color;
+            transition-property: color;
         }
 
         #skills>section>section:nth-child(3)>div>figure>figcaption {
@@ -1010,7 +1021,7 @@
             font-family: 'Poppins', sans-serif;
             font-size: 0.9vw;
             transition-duration: 1s;
-            transition-property:color;
+            transition-property: color;
         }
 
         #skills>section>section:nth-child(4) {
@@ -1038,14 +1049,14 @@
             position: relative;
             height: 300px;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
-        #skills>section>section:nth-child(4)>div:hover{
+        #skills>section>section:nth-child(4)>div:hover {
             background-color: rgb(14, 14, 23);
             border-color: white;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
         #skills>section>section:nth-child(4)>div:hover h3 {
@@ -1166,14 +1177,14 @@
             border-radius: 20px;
             position: relative;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
-        #my_projects>section>section:nth-child(3)>div:hover{
+        #my_projects>section>section:nth-child(3)>div:hover {
             background-color: rgb(14, 14, 23);
             border-color: white;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
         #my_projects>section>section:nth-child(3)>div:hover h4 {
@@ -1241,10 +1252,10 @@
             font-weight: 100;
             z-index: 2;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
-        #my_projects>section>a:nth-child(4)>section:hover{
+        #my_projects>section>a:nth-child(4)>section:hover {
             background-color: rgb(14, 14, 23);
             transition-duration: 1s;
             transition-property: background-color;
@@ -1253,7 +1264,7 @@
         #my_projects>section>a:nth-child(4)>section:hover p {
             color: #EB4A4C;
             transition-duration: 0.5s;
-            transition-property:color;
+            transition-property: color;
         }
 
         #my_projects>section>a:nth-child(4)>section>p {
@@ -1263,7 +1274,7 @@
             left: 0;
             right: 0;
             transition-duration: 0.5s;
-            transition-property:color;
+            transition-property: color;
         }
 
         /* my assignments */
@@ -1317,14 +1328,14 @@
             border-radius: 20px;
             position: relative;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
-        #my_assignments>section>section:nth-child(3)>div:hover{
+        #my_assignments>section>section:nth-child(3)>div:hover {
             background-color: rgb(14, 14, 23);
             border-color: white;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
         #my_assignments>section>section:nth-child(3)>div:hover h4 {
@@ -1394,8 +1405,8 @@
             z-index: 2;
         }
 
-         #my_assignments>section>a:nth-child(4)>section:hover{
-                background-color: rgb(14, 14, 23);
+        #my_assignments>section>a:nth-child(4)>section:hover {
+            background-color: rgb(14, 14, 23);
             transition-duration: 1s;
             transition-property: background-color;
         }
@@ -1469,11 +1480,11 @@
             border: 3px solid hsla(0, 0%, 35%, 0.5);
         }
 
-        #my_edu_quali>section>section:nth-child(3)>div:hover{
+        #my_edu_quali>section>section:nth-child(3)>div:hover {
             background-color: rgb(14, 14, 23);
             border-color: white;
             transition-duration: 1s;
-            transition-property: background-color,border-color;
+            transition-property: background-color, border-color;
         }
 
         #my_edu_quali>section>section:nth-child(3)>div:hover h4 {
@@ -1795,21 +1806,23 @@
         }
 
         /* common elements */
-        body>main>section>section>hr{
-            animation-name:hr_width;
-            animation-duration:2s;
-            animation-iteration-count:infinite;
+        body>main>section>section>hr {
+            animation-name: hr_width;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
         }
 
-        @keyframes hr_width{
-            0%{
-                width:0%;
+        @keyframes hr_width {
+            0% {
+                width: 0%;
             }
-            80%{
-                width:80%;
+
+            80% {
+                width: 80%;
             }
-            80%{
-                width:80%;
+
+            80% {
+                width: 80%;
             }
         }
 
@@ -1919,13 +1932,14 @@
             transition-duration: 0.5s;
             transition-property: border;
             z-index: 2;
-             animation: rotateDiv 3s linear infinite;
+            animation: rotateDiv 3s linear infinite;
         }
 
-          @keyframes rotateDiv {
+        @keyframes rotateDiv {
             0% {
                 transform: rotate(0deg);
             }
+
             100% {
                 transform: rotate(360deg);
             }
@@ -1940,15 +1954,17 @@
         }
 
         @keyframes up_icon_fade {
-             0% {
-        opacity: 0.5;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0.5;
-    }
+            0% {
+                opacity: 0.5;
+            }
+
+            50% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0.5;
+            }
         }
 
         body>div:nth-child(4):hover {
@@ -1960,15 +1976,14 @@
 
         body>div:nth-child(4):hover a>i {
             background-color: white;
-             animation-play-state: paused;
+            animation-play-state: paused;
         }
 
         main {
             position: relative;
         }
 
-        body {
-        }
+        body {}
 
         * {
             scroll-behavior: smooth;
@@ -1989,7 +2004,11 @@
         /* media queries */
         /* 320px */
         @media all and (max-width:320px) {
-
+            .code {
+                font-size: 10px;
+                text-shadow: none;
+            }
+            
             /* header  */
             body>header>section:nth-child(2)>nav {
                 display: none;
@@ -2469,6 +2488,10 @@
 
         /* 320 - 375 */
         @media all and (min-width:320px) and (max-width:375px) {
+            .code {
+                font-size: 10px;
+                text-shadow: none;
+            }
 
             /* header  */
             body>header>section:nth-child(2)>nav {
@@ -2955,6 +2978,10 @@
 
         /* 375 - 425 */
         @media all and (min-width:375px) and (max-width:425px) {
+            .code {
+                font-size: 10px;
+                text-shadow: none;
+            }
 
             /* header  */
             body>header>section:nth-child(2)>nav {
